# ftag-opt-framework

./: .gitignore  ChangeLog  README  README.md  setup-r207.sh  setup-r21.sh
btagIBLAnalysis/: CMakeLists.txt
btagIBLAnalysis/macros/: AtlasStyle.C  CompareROC.py  Plotter_pt2.C  QuickPlotting.py  README.txt  runAll_special.C
btagIBLAnalysis/python/: configHelpers.py
btagIBLAnalysis/share/: RetagFragment.py  batchSub.py  jobOptions_Tag.py  jobOptions_Tag_bb.py  jobOptions_holistic.py  jobOptions_ipmp.py  jobOptions_tagsimple.py  (+2 more)
run/: RetagFragment.py  jobOptions_Tag.py  jobOptions_Tag_bb_ExKt.py  mc_samples.txt  submitJobs.py
scripts/: build-r207.sh  build.sh  checkout-dev-r207.sh  checkout-dev-r21.sh  download-rnnip-files.sh  ftag-grid-name.sh  ftag-grid-sub-hbb.sh  ftag-grid-sub-rnnip.sh  ftag-grid-sub.sh
xAODAthena/: ChangeLog  README
xAODAthena/btagIBLAnalysis/: CMakeLists.txt
xAODAthena/btagIBLAnalysis/cmt/: cleanup.csh  cleanup.sh  requirements  setup.csh  setup.sh  version.cmt
xAODAthena/btagIBLAnalysis/macros/: AtlasUtils.C  AtlasUtils.h  CompareEff.py  CompareROC.py  Plotter_pt2.C  Plotter_pt3.C  Plotter_pt3_cjets.C  PrintROC.py  QuickComparison.C  QuickPlotting.py  QuickPlotting_rej.py  README.txt  runAll.C  runAll_special.C
xAODAthena/btagIBLAnalysis/macros/JetFitterMacros/: QuickComparison_2D.C  QuickComparison_vtx.C  README.txt
xAODAthena/btagIBLAnalysis/macros/TrackPlotting/: Compile.sh  FileList.txt  TrackPlotting.C  TrackPlotting.h
xAODAthena/btagIBLAnalysis/macros/ValidationPlot/: Chaining.C  Chaining.h  README.txt  histcompseparate.C  make_TChain_Local.sh  runAll.C
xAODAthena/btagIBLAnalysis/python/: configHelpers.py
xAODAthena/btagIBLAnalysis/src/: ArbitraryJetBranches.cxx  ArbitraryJetBranches.hh  BHadronBranchBuffer.hh  BHadronBranches.cxx  BHadronBranches.hh  ClusterBranches.cxx  GAFlavourLabel.cxx  JetFitterBranchBuffer.hh  JetFitterBranches.hh  SubjetBranchBuffer.hh  SubjetBranches.cxx  SubjetBranches.hh  SubstructureMomentBranches.cxx  TrackBranchBuffer.hh  TrackBranches.cxx  TrackBranches.hh  TrackCovBranches.cxx  TrackCovBranches.hh  UnclusteredVertexBranches.cxx  btagIBLAnalysisAlg.cxx  btagIBLAnalysisAlg.h  track_to_vertex_associators.cxx  track_to_vertex_associators.hh
xAODAthena/btagIBLAnalysis/src/components/: btagIBLAnalysis_entries.cxx  btagIBLAnalysis_load.cxx
(+46 files in other folders)
